<resources>
    <string name="app_name">AST</string>
    <string name="search">sim</string>
    <string name="pause">pause</string>
    <string name="radioinfo">Radio Info</string>
    <string name="mobile_network">Mobile Network Settings</string>
    <string name="compatibility_test">Compatibility Test</string>
    <string name="settings">Settings</string>
    <string name="file_manager">File Manager</string>
    <string name="import_clf">Import CLF</string>
    <string name="change_log">Change Log</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="overview">OVERVIEW</string>
    <string name="map">MAP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_info">Phone Info</string>
    <string name="select_index">Select Phone Index</string>
    <string name="imei">IMEI:</string>
    <string name="number">Phone Number:</string>
    <string name="current_id">Current subID:</string>
    <string name="sub_id">SubId of default data SIM:</string>
    <string name="imsi">IMSI:</string>
    <string name="current_network">Current Network:</string>
    <string name="roaming">Roaming</string>
    <string name="data_service">Data Service:</string>
    <string name="datanetwork">Data Network Type:</string>
    <string name="voiceservice">Voice Service Detail:</string>
    <string name="voicenetwork">Voice Network Type:</string>
    <string name="signal_strength">Signal Strength:</string>
    <string name="dl">DL Bandwidth (kbps)</string>
    <string name="ul">UL Bandwidth (kbps)</string>
    <string name="lte">LTE Physical Channel Configration</string>
    <string name="strLte">LTE</string>
    <string name="preferred">Set Preferred Network type:</string>
    <string name="name">Name</string>
    <string name="mcc">MCC</string>
    <string name="enB">eNB ID</string>
    <string name="tac">TAC</string>
    <string name="band">BAND</string>
    <string name="mnc">MNC</string>
    <string name="lcid">LCID</string>
    <string name="pci">PCI</string>
    <string name="rfc">RFC</string>
    <string name="state">STATE</string>
    <string name="roam">ROAM</string>
    <string name="eci">ECI</string>
    <string name="type">TYPE</string>
    <string name="bw">BW</string>
    <string name="rsrp">RSRP</string>
    <string name="rssi">RSSI</string>
    <string name="rsrq">RSRQ</string>
    <string name="snr">SNR</string>
    <string name="ta">TA</string>
    <string name="cqi">CQI</string>
    <string name="UL">UL</string>
    <string name="DL">DL</string>
    <string name="lat">LAT</string>
    <string name="lon">LON</string>
    <string name="a">A</string>
    <string name="v">V</string>
    <string name="preferred_network">Select Preferred Network Type:</string>
    <string name="mobile_radio_power">Mobile Radio Power</string>
    <string name="VoLTE_calling_provisioned">VoLTE Calling Provisioned</string>
    <string name="video_calling_provisioned">Video Calling Provisioned</string>
    <string name="wifi_calling_provisioned">Wi-Fi Calling Provisioned</string>
    <string name="eab">EAB/Presence Provisioned</string>
    <string name="dsds">Enable DSDS</string>
    <string name="disable">Disable</string>
    <string name="about_app">About Network App</string>
    <string name="version">Version 1.6.8</string>
    <string name="version2">\@ 2021 by Carsten Knutter</string>
    <string name="email">Email Support At:</string>
    <string name="email2"><a>pynetmony@google.com</a></string>
    <string name="translate">Translate Into Your Language By:</string>
    <string name="desc1">Become a beta tester to get new feature first and help to improve the app</string>
    <string name="desc1_link"><a>https://play.google.com/store/apps/details?id=com.iapdemohl=en_USgl=US</a> </string>
    <string name="facebook">Network Application Facebook Group</string>
    <string name="general">General</string>
    <string name="map_small_letters">Map</string>
    <string name="notification">Notification</string>
    <string name="calibration">Calibration</string>
    <string name="cell_list_file">Cell List File</string>
    <string name="drive_test">Drive Test</string>
    <string name="language">Language</string>
    <string name="screen_on">Keep Screen Always On</string>
    <string name="sim_card">Sim Card For Overview Tab</string>
    <string name="color_theme">Color Theme</string>
    <string name="color_theme_setting">Color Theme For Settings</string>
    <string name="set_direction">Set Direction</string>
    <string name="display_cell">Display In Cell Table</string>
    <string name="default_email">Default Email Address</string>
    <string name="select_language">Select A Language (Restart Required)</string>
    <string name="default_language">Automaticaaly (Default)</string>
    <string name="english">English</string>
    <string name="deutsch">Deutsch</string>
    <string name="espanol">Espanol</string>
    <string name="hrvatski">Hrvatski</string>
    <string name="polski">Polski</string>
    <string name="cancel">CANCEL</string>
    <string name="keep_screen_on">Keeps Screen Always On</string>
    <string name="brigtness">User\'s Preferred Brightness</string>
    <string name="minimum_brightness">Minimum Brightness</string>
    <string name="maximum_brightness">Maximum Brightness</string>
    <string name="select_sim">Select The Sim Card To Be Displayed In The Overview Tab</string>
    <string name="sim1">SIM Card 1</string>
    <string name="sim2">SIM Card 2</string>
    <string name="fav_color_theme">Choose Your Favorite Color Theme (App Restrat Required)</string>
    <string name="blue">Blue as the sky</string>
    <string name="red">Red as Vodafone</string>
    <string name="black">Total Black</string>
    <string name="magenta">Magenta</string>
    <string name="prussian_blue">Prussian Blue as Telefonica</string>
    <string name="red_ilaid">Red As Ilaid</string>
    <string name="select_direction">Select Your Color Direction To The Direction Of Travel</string>
    <string name="forward">Forwards</string>
    <string name="backward">Backwards</string>
    <string name="display_cell_d">Selection of the Display In the Neighbouring Cell Table</string>
    <string name="arfcn">ARFCN</string>
    <string name="frequency">Frequency</string>
    <string name="default_email_dialog">Enter the Standard Address for Sending</string>
    <string name="ok">OK</string>
    <string name="type_of_map">Type Of Map</string>
    <string name="automatic_zoom">Automatic Zoom</string>
    <string name="show_traffic">Show Traffic</string>
    <string name="cells">Only Cells of the Same System</string>
    <string name="cell_plmn">Show Cells From All PLMN</string>
    <string name="size_of_symbol">Size Of Antenna Symbol</string>
    <string name="radius">"Radius In km In Which Cells are Dsiplayed "</string>
    <string name="footprint">Extended Footprint</string>
    <string name="beam">Beam length In Meter (0= automatic)</string>
    <string name="size">Size of the Measuring Points</string>
    <string name="max_points">Maximum Number of Measuring Point</string>
    <string name="map_type">Choose The Map Type</string>
    <string name="none">None</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="size_antenna">Choose the Size of Antenna Symbol</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="extented_footprint">Select The Bandwidth of the Extended Footprint</string>
    <string name="auto">Automatic 10dB</string>
    <string name="cell_selection_sim1">Cell Selection SIM 1</string>
    <string name="ringtone_sim1">Ringtone For SIM 1</string>
    <string name="cell_selection_sim2">Cell Selection SIM 2</string>
    <string name="ringtone_sim2">Ringtone For SIM 2</string>
    <string name="specific_cell_sim1">Specific Cell SIM 1</string>
    <string name="specific_cell_id_sim1">Specific Cell ID SIM 1</string>
    <string name="specific_cell_sim2">Specific Cell SIM 2</string>
    <string name="specific_cell_id_sim2">Specific Cell ID SIM 2</string>
    <string name="app_name_new">AST</string>
    <string name="device_info">Device Info:</string>
    <string name="model">Model:</string>
    <string name="brand">Brand:</string>
    <string name="board">Board:</string>
    <string name="hardware">Hardware:</string>
    <string name="screen_size">Screen Size:</string>
    <string name="screen_resolution">Screen Resolution</string>
    <string name="screen_dimension">Screen Dimension</string>
    <string name="nr_nsa">NR_NSA</string>
    <string name="ping_test">Ping Test</string>
    <string name="net">NET</string>
    <string name="cid">CID</string>
    <string name="dist">DIST</string>
    <string name="frq">FRQ</string>
    <string name="azi">AZI</string>
    <string name="pmln">PMLN</string>
    <string name="cellID">Cell ID</string>
    <string name="downloading">Downloading Speed</string>
    <string name="uploading">Uploading Speed</string>
    <string name="speed_test">Speed Test</string>
    <string name="lac">LAC</string>
    <string name="rnc">RNC</string>
    <string name="bsic">BSIC</string>
    <string name="qual">QUAL</string>
    <string name="psc">PSC</string>
    <string name="uci">UCI</string>
    <string name="rscp">RSCP</string>
    <string name="ecno">EcNo</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="gsm">GSM</string>
    <string name="wcdma">WCDMA</string>
    <string name="nr">NR</string>
    <string name="unknown">Unknown</string>
    <string name="permissions_granted">Permissions Granted</string>
    <string name="str_Advanced">Advanced Smart Tech</string>
    <string name="speed_test_history">Speed Test History</string>
</resources>