<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/section2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:weightSum="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:text="@string/net" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:text="@string/rsrp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/net_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:text="--"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rsrp_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:text="--"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:text="@string/type" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:text="@string/rsrq" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/technology_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:text="--"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rsrq_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:text="--"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:text="@string/cid" />

            <TextView
                android:id="@+id/ta"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:text="@string/dist" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cid_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:text="--"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dist_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:text="--"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/frq"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:text="@string/frq" />

            <TextView
                android:id="@+id/azi"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:text="@string/azi" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/frq_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:text="--"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/azi_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:text="--"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/section2" />
</androidx.constraintlayout.widget.ConstraintLayout>