<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/main_bg"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Compatibility Test"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textFontWeight="800"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/model"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/brand"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/board"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/board"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/hardware"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/hardware"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/screen_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/screen_size"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/screen_resolution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/screen_resolution"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/screen_dimension"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/screen_dimension"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/model_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="1000"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/model"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/brand_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="1000"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/brand"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/board_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="1000"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/board"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/hardware_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="1000"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/hardware"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/screen_size_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="1000"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/screen_size"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/screen_resolution_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="1000"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/screen_resolution"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/screen_dimension_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="1000"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/screen_dimension"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>